--- a/seminar-fusion-2cat/seminar-fusion-2cat.tex
+++ b/seminar-fusion-2cat/seminar-fusion-2cat.tex
@@ -649,7 +649,7 @@ F : \cB C &\to \cC
 which is fully faithful by construction.
 Then
 \[
-F^\nabla: \cB C \to \cC
+F^\nabla: (\cB C)^\nabla \to \cC
 \]
 is fully faithful.
 It remains to show that $F^\nabla$ is essentially surjective,
