--- a/seminar-fusion-2cat/seminar-fusion-2cat.tex
+++ b/seminar-fusion-2cat/seminar-fusion-2cat.tex
@@ -771,7 +771,7 @@ as objects of $C$.
 
 Clearly $\amod{e}(C)$ is simply $C$ itself
 as a right module category over itself.
-For $r$, it is clear that a module over $r$ in $C$
+For $f$, it is clear that a module over $f$ in $C$
 is determined by any of its components
 (as a $G$-graded vector space),
 thus $\amod{f}(C) \simeq \Vect$,
