added picture of indras net lol

--- a/seminar-fusion-2cat/seminar-fusion-2cat-slides.tex
+++ b/seminar-fusion-2cat/seminar-fusion-2cat-slides.tex
@@ -836,6 +836,13 @@ the data to reconstruct the whole 2-category.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}
+\frametitle{Indra's Net of Pearls}
+
+\includegraphics[width=10cm]{indrasNet.jpg}
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}
 \frametitle{Example}
 
 $C = \Vect_{G}$ for a finite group $G$.
